# pico-multicore

./: CMakeLists.txt  README.md  multicore.cpp
